--- a/silver/package.json
+++ b/silver/package.json
@@ -22,12 +22,14 @@
     "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
