--- a/silver/package.json
+++ b/silver/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "sonner": "^1.5.0",
